--- a/admin/index.html
+++ b/admin/index.html
@@ -9,11 +9,9 @@
     <meta content="" name="description">
 
     <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
+    <link href="/images/logo/favicon_black.svg" rel="icon">
 
-    <!-- Google Web Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     
     <!-- Icon Font Stylesheet -->
@@ -21,13 +19,18 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
     <!-- Libraries Stylesheet -->
-    <link href="/admin/src/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-    <link href="/admin/src/lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
+    <link
+          href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+          rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+          crossorigin="anonymous"
+    />
+
     <!-- Customized Bootstrap Stylesheet -->
-    <link href="/admin/css/bootstrap.css" rel="stylesheet">
+    <link href="/css/bootstrap.css" rel="stylesheet">
 
     <!-- Template Stylesheet -->
-    <link href="/admin/css/style.css" rel="stylesheet">
+    <link href="/css/admin.css" rel="stylesheet">
 </head>
 
 <body>
@@ -380,20 +383,12 @@
     </div>
 
     <!-- JavaScript Libraries -->
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="/admin/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/admin/node_modules/@popperjs/core/dist/umd/popper.min.js"></script>
-    <script src="/admin/src/lib/chart/chart.min.js"></script>
-    <script src="/admin/src/lib/easing/easing.min.js"></script>
-    <script src="/admin/src/lib/waypoints/waypoints.min.js"></script>
-    <script src="/admin/src/lib/owlcarousel/owl.carousel.min.js"></script>
-    <script src="/admin/src/lib/tempusdominus/js/moment.min.js"></script>
-    <script src="/admin/src/lib/tempusdominus/js/moment-timezone.min.js"></script>
-    <script src="/admin/src/lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
     <!-- Template Javascript -->
-    <script src="/admin/src/js/main.js"></script>
-    <script src="/admin/src/js/drop-image.js"></script>
+    <script src="/js/main.js"></script>
+    <script src="/js/drop-image.js"></script>
 </body>
 
 </html>
