--- a/admin/index.html
+++ b/admin/index.html
@@ -18,14 +18,6 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
-    <!-- Libraries Stylesheet -->
-    <link
-          href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-          rel="stylesheet"
-          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-          crossorigin="anonymous"
-    />
-
     <!-- Customized Bootstrap Stylesheet -->
     <link href="/css/bootstrap.css" rel="stylesheet">
 
@@ -51,15 +43,10 @@
                     <h3 class="text-primary">DeAdmin</h3>
                 </a>
                 <div class="navbar-nav w-100">
-                    <a href="index.html" class="nav-item nav-link active"><i class="fa fa-tachometer-alt me-2"></i>Dashboard</a>
-                    <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-laptop me-2"></i>Quản lý</a>
-                        <div class="dropdown-menu bg-transparent border-0">
-                            <a href="/src/add_product.html" class="dropdown-item ">Tạo sản phẩm</a>
-                            <a href="/src/edit_product.html" class="dropdown-item">Chỉnh sửa sản phẩm</a>
-                            <a href="/src/product.html" class="dropdown-item">Sản phẩm</a>
-                        </div>
-                    </div>
+                    <a href="/admin/index.html" class="nav-item nav-link active"><i class="fa fa-home me-2"></i>Dashboard</a>
+                    <a href="/admin/product.html" class="nav-item nav-link"><i class="fa fa-box me-2"></i>Sản phẩm</a>
+                    <a href="/admin/add_product.html" class="nav-item nav-link"><i class="fa fa-plus-circle me-2"></i>Tạo sản phẩm</a>
+                    <a href="/admin/edit_product.html" class="nav-item nav-link"><i class="fa fa-edit me-2"></i>Chỉnh sửa sản phẩm</a>
                 </div>
             </nav>
         </div>
