--- a/admin/edit_product.html
+++ b/admin/edit_product.html
@@ -19,10 +19,10 @@
    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
    <!-- Customized Bootstrap Stylesheet -->
-   <link href="/css/bootstrap.css" rel="stylesheet">
+   <link href="/css/bootstrap.css" rel="stylesheet" type="text/css">
 
    <!-- Template Stylesheet -->
-   <link href="/css/admin.css" rel="stylesheet">
+   <link href="/css/admin.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
