--- a/admin/login.html
+++ b/admin/login.html
@@ -19,10 +19,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
     <!-- Customized Bootstrap Stylesheet -->
-    <link href="/css/bootstrap.css" rel="stylesheet">
+    <link href="/css/bootstrap.css" rel="stylesheet" type="text/css">
 
     <!-- Template Stylesheet -->
-    <link href="/css/admin.css" rel="stylesheet">
+    <link href="/css/admin.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -47,15 +47,18 @@
                             </a>
                             <h3>Sign In</h3>
                         </div>
-                        <div class="form-floating mb-3">
-                            <input type="text" class="form-control" id="account" placeholder="Nhập tên tài khoản">
-                            <label for="floatingInput">Nhập tên tài khoản</label>
-                        </div>
-                        <div class="form-floating mb-4">
-                            <input type="password" class="form-control" id="password" placeholder="Nhập mật khẩu">
-                            <label for="password">Nhập mật khẩu</label>
-                        </div>
-                        <button type="submit" class="btn btn-primary py-3 w-100 mb-4">Sign In</button>
+                        <form>
+                            <div class="form-floating mb-3">
+                                <input type="text" class="form-control" id="account" placeholder="Nhập tên tài khoản">
+                                <label for="account">Nhập tên tài khoản</label>
+                            </div>
+                            <div class="form-floating mb-4">
+                                <input type="password" class="form-control" id="password" placeholder="Nhập mật khẩu">
+                                <label for="password">Nhập mật khẩu</label>
+                            </div>
+                            <button type="submit" class="btn btn-primary py-3 w-100 mb-4">Sign In</button>
+                        </form>
+                        
                     </div>
                 </div>
             </div>
