--- a/user/404.html
+++ b/user/404.html
@@ -10,7 +10,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- style CSS -->
-    <link rel="stylesheet" href="/css/user.css">
+    <link rel="stylesheet" href="/css/user.css" type="text/css">
 </head>
 
 <body>
