--- a/user/cart.html
+++ b/user/cart.html
@@ -6,29 +6,29 @@
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
+    >
     <title>Giỏ hàng</title>
-    <link rel="icon" href="/images/logo/favicon_black.svg" />
+    <link rel="icon" href="/images/logo/favicon_black.svg">
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
-    />
+    >
     <!-- icon CSS -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
     />
-    <link rel="stylesheet" href="/css/themify-icons.css" />
+    <link rel="stylesheet" href="/css/themify-icons.css" type="text/css">
     <!-- plugin CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css"
       rel="stylesheet"
-    />
+    >
     <!-- style CSS -->
-    <link rel="stylesheet" href="/css/user.css"/>
+    <link rel="stylesheet" href="/css/user.css" type="text/css">
   </head>
 
   <body>
@@ -183,7 +183,7 @@
                   <button
                     type="button"
                     id="continueBtn"
-                    class="custom_btn btn_black btn-block mb-3"
+                    class="custom_btn btn_black btn_block mb-3"
                   >
                     Check out
                   </button>
