--- a/user/checkout.html
+++ b/user/checkout.html
@@ -6,30 +6,30 @@
         <meta
           name="viewport"
           content="width=device-width, initial-scale=1, shrink-to-fit=no"
-        />
+        >
         <title>Checkout</title>
-        <link rel="icon" href="/images/logo/favicon_black.svg" />
+        <link rel="icon" href="/images/logo/favicon_black.svg">
         <!-- Bootstrap CSS -->
         <link
           href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
           rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
           crossorigin="anonymous"
-        />
+        >
     
         <!-- icon CSS -->
         <link
           rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
-        />
-        <link rel="stylesheet" href="/css/themify-icons.css" />
+        >
+        <link rel="stylesheet" href="/css/themify-icons.css" type="text/css">
         <!-- plugin CSS -->
         <link
           href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css"
           rel="stylesheet"
-        />
+        >
         <!-- style CSS -->
-        <link rel="stylesheet" href="/css/user.css"/>
+        <link rel="stylesheet" href="/css/user.css" type="text/css">
       </head>
 
   <body>
