--- a/user/single-product.html
+++ b/user/single-product.html
@@ -10,14 +10,14 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <!-- plugin CSS -->
-  <link rel="stylesheet" href="/plugins/owl.carousel.min.css">
-  <link rel="stylesheet" href="/plugins/owl.theme.default.min.css">
-  <link rel="stylesheet" href="/plugins/magnific-popup.css">
+  <link rel="stylesheet" href="/plugins/owl.carousel.min.css" type="text/css">
+  <link rel="stylesheet" href="/plugins/owl.theme.default.min.css" type="text/css">
+  <link rel="stylesheet" href="/plugins/magnific-popup.css" type="text/css">
   <!-- icon CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-  <link rel="stylesheet" href="/css/themify-icons.css">
+  <link rel="stylesheet" href="/css/themify-icons.css" type="text/css">
   <!-- style CSS -->
-  <link rel="stylesheet" href="/css/user.css">
+  <link rel="stylesheet" href="/css/user.css" type="text/css">
 </head>
 
 <body>
@@ -259,7 +259,7 @@
                 </div>
             </div>
         </div>
-        <div class="row">
+        <div class="row">ư
             <div class="col-lg-12">
                 <div class="product_list_slider owl-carousel owl-theme">
                     <div class="single_product_list_slider">
