--- a/user/single-product.html
+++ b/user/single-product.html
@@ -240,7 +240,7 @@
                 </div>
             </div>
         </div>
-        <div class="row">ư
+        <div class="row">
             <div class="col-lg-12">
                 <div class="product_list_slider owl-carousel owl-theme">
                     <div class="single_product_list_slider">
